--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,661 @@
 * {
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
-h1 {
-    color: rgb(0, 122, 156);
+body{
+
+    background-color: #f6f6f6;
+    height: 150vh;
+
 }
+
+#connexion {
+
+    background-color: #011A46;
+    height: 100vh;
+
+}
+
+.Content {
+
+    width: 100%;
+    
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: "Merriweather", sans-serif;
+    font-weight: 500;
+    
+}
+
+.formBox {
+    
+    width: 40%;
+    height: 650px;
+    background: linear-gradient(0deg, rgba(1,26,70,1) 0%, rgba(10,77,193,1) 100%);
+    border: 1px solid white;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, .1); 
+    border-radius: 15px;
+    padding: 2em 2em;
+    
+}
+
+.title {
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+form.formulaire {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%; 
+    margin-top: 1.5em; 
+  
+}
+
+.input {
+
+    width: 80%;
+    height: 55px;
+    background: none;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 1em 4em;
+    color: white;
+    font-size: 1em;
+    margin-top: 1.5em;
+    font-family: "Merriweather", sans-serif;
+    font-weight: 500;
+    
+}
+
+.submit {
+
+    background: rgba(10,77,193,1);
+    border: none;
+    width: 80%;
+    height: 55px;
+    border-radius: 25px;
+    text-align: center;
+    color: white;
+    font-size: 1.3em;
+    font-family: "Merriweather", sans-serif;
+    font-weight: 500;
+    margin-top: 2em;
+    
+}
+
+.submit:hover{
+
+    cursor: pointer;
+    background: rgb(10, 44, 193);
+
+}
+
+.user{
+
+    position: absolute;
+    left: 12%;
+    top: 10.3%;
+    color: white;
+}
+
+.envelope{
+
+    position: absolute;
+    left: 12%;
+    top: 29.7%;
+    color: white;
+
+}
+
+.fa-unlock{
+
+    position: absolute;
+    left: 12%;
+    top: 48.5%;
+    color: white;
+
+}
+
+.fa-lock{
+
+    position: absolute;
+    left: 12%;
+    top: 67.6%;
+    color: white;
+}
+
+.connecter{
+
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 10px;
+    margin-top: 2em;
+    
+}
+
+.connecter p {
+
+    color: white;
+
+}
+
+.connecter a {
+
+    color: rgba(116,212,253,1);
+    font-weight: 700;
+    text-decoration: none;
+    
+}
+
+
+h1{
+
+    color: white;
+    font-family: "Merriweather", sans-serif;
+    font-weight: bold; 
+      
+}
+
+#content {
+
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    width: 65%; 
+
+}
+
+#content:after, #content>:first-child:after {
+
+    position: absolute; 
+    content:' ';
+    width: 60px; 
+    height: 50px;
+    border-color :white; 
+    border-style: solid; 
+
+}
+
+#content:after {
+
+    top: -20%;
+    right: 0;
+    border-width: 4px 4px 0 0;
+
+}
+
+#content>:first-child:after {
+
+    bottom: 5%;
+    left: 0;
+    border-width: 0 0 4px 4px; 
+
+}
+
+#container{
+    
+    position: relative;
+    width: 100%;
+
+}
+
+.list-unstyled {
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+}
+  
+.d-flex {
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+
+}
+
+.header {
+
+    background: linear-gradient(90deg, rgba(116,212,253,1) 0%, rgba(10,77,193,1) 100%);;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    padding: 1em 2em;
+
+}
+
+.logo {
+
+    width: 12%;
+    margin-left: 1em;  
+     
+}
+
+.center{
+
+    width: 50%;
+
+}
+
+.scroller{
+
+    text-align: center;
+    
+}
+
+.menu {
+
+    display: inline-flex;
+    justify-content: space-between; 
+    width: 75%;
+
+}
+
+.header i {
+
+    color: #000;
+    font-size: 1.1em;
+    padding-right: 1em;
+
+}
+
+.header a{
+
+    color: #000;
+    text-decoration: none;
+    font-family: "Merriweather", sans-serif;
+    font-weight:600;
+
+}
+
+.menuList:hover {
+
+    color: #FFF;
+
+}
+
+.header .burgerList {
+
+    font-family: "Merriweather", sans-serif;
+    font-size: 2rem;
+    letter-spacing: 2px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: right;
+    width: 15%;
+    padding-right: .8em;
+
+}
+
+nav {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: fixed;
+    top: 80px;
+    right: 0;
+    width: 0;
+    overflow: hidden;
+    opacity: 0;
+    height: calc(10vh - 10px);
+    background-color: rgb(255, 255, 255);
+    
+    transition: all .6s ease-out;
+
+}
+
+.show-nav nav {
+
+    opacity: 1;
+    width: 8%;
+    height: 10%;
+    right: .5%;
+    z-index: 2;
+
+}
+
+.show-nav nav li a:hover {
+
+    color: rgba(10,77,193,1);
+    transform: scale(1.1);
+    text-decoration: none;
+
+}
+
+.show-nav .burger .bar {
+
+    width: 0;
+
+}
+
+.burger .bar::before,
+.burger .bar::after {
+
+    transition: all .2s ease-out;
+
+}
+
+.show-nav .burger .bar::before {
+
+    transform: rotate(-45deg);
+
+}
+
+.show-nav .burger .bar::after {
+
+    transform: rotate(45deg);
+
+}
+  
+.burger {
+
+    background: none;
+    border: none;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    position: relative;
+    
+}
+  
+.burger .bar {
+
+    display: block;
+    width: 22px;
+    height: 3px;
+    background: #000;
+
+}
+  
+.burger .bar::before,
+.burger .bar::after {
+
+    display: block;
+    content: "";
+    width: 22px;
+    height: 3px;
+    background: #000;
+    position: absolute;
+
+}
+  
+.burger .bar::before {
+
+    transform: translateY(-8px);
+
+}
+  
+.burger .bar::after {
+
+    transform: translateY(8px);
+
+}
+
+.grid{
+
+    display: flex;
+    width: 100%;
+
+}
+
+#navMenu{
+
+    width: 20%;
+    display: block;
+    align-items: center;
+    position: fixed;
+    padding-left: 2.5em;
+    
+}
+
+.listNav {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 500px;
+    width: 100%;  
+
+}
+
+.listNav:hover{
+
+    border-right: 5px solid #cacaca;
+   
+}
+
+.listNav a {
+
+    text-decoration: none;
+
+}
+
+.listContent{
+
+    width: 100%;
+    height: 50px;
+    align-content: center;
+
+}
+
+.listContent span{
+
+    color: #151C27;
+    width: 50%;
+    justify-content: center; 
+    font-size: 1.2em;
+    padding-left: 1.3em;
+    font-family: "Merriweather", sans-serif;
+    font-weight: 500;
+
+}
+
+.divider{
+
+    border-bottom: 1px solid #918e8e;
+    width: 94%;
+    margin-left: .8em;
+    list-style: none;
+    
+}
+
+.listContent i{
+
+   color: rgba(10,77,193,1);
+   border-left: none;
+   width: 10%;
+   padding-left: .5em;
+   font-size: 1.5em;
+
+}
+
+.listContent:hover{
+
+    background-color:#cacaca; 
+    border-radius: 5px;
+    cursor: pointer;
+
+}
+
+#navList{
+
+    width: 50%; 
+    justify-content: center; 
+    align-items: center;
+    position: absolute;
+    left: 33.9%; 
+    
+}
+
+.publicationContent {
+
+    width: 60%;
+    height: 135px;
+    background-color: white;
+    border-radius: 15px;
+    padding: 1em 1em;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, .1);  
+    
+}
+
+.publication {
+
+    width: 100%;
+    height: 40px;
+    display: flex;
+    gap: 8px;
+  
+}
+
+.publication figure{
+
+    width: 7%;
+
+}
+
+.publication img{
+
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+
+}
+
+.writeSomething{
+
+    width: 92%;
+    padding: 0 1em;
+    background: #f3f3f3;
+    color: #918e8e;
+    font-size: 1em;
+    border-radius: 30px;
+    border: none;
+    cursor: pointer;
+    text-align: justify;
+    font-family: "Merriweather", sans-serif;
+    font-weight: 400;
+
+}
+
+.writeSomething:hover{
+
+    background: #cacaca;
+
+}
+
+.divider2 {
+
+    border-bottom: 1px solid #918e8e;
+    padding-top: 1em;
+    width: 100%;
+
+}
+
+.publicationIcone{
+
+    width: 100%;
+    height: 40%;
+    padding-top: 1em;
+    display: flex;
+    align-items: center; 
+    justify-content: space-between; 
+    
+}
+
+.icone{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+    gap: 10px;
+    color: #151C27;
+    font-family: "Merriweather", sans-serif;
+    font-weight: 500;
+
+}
+
+.icone i {
+
+    font-size: 1.3em;
+}
+
+#card {
+
+  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    width: 20%;
+    position: absolute;
+    position: fixed;
+    right: 2%;
+
+
+}
+
+.card1 {
+
+    width: 90%;
+    height: 250px;
+    background-color: white;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, .1);
+    border-radius: 15px;
+    padding: .5em 2em;
+
+}
+
+h2{
+
+    font-size: 1.5em;
+    text-align: justify;
+    color: #151C27;
+    font-family: "Merriweather", sans-serif;
+    font-weight: 600;
+}
+
+.card2 {
+
+    width: 90%;
+    height: 350px;
+    background: linear-gradient(0deg, rgba(1,26,70,1) 0%, rgba(10,77,193,1) 100%);
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, .1);
+    border-radius: 15px;
+    padding: .5em 2em;
+
+}
+
+.card2 h2 {
+
+    color: white;
+
+}
+
+
+
+
+
