--- a/public/css/style.css
+++ b/public/css/style.css
@@ -343,8 +343,8 @@ form.formulaire2 {
     width: 80%;
     height: 55px;
     background: none;
-    color: #011A46;
-    border: 1px solid #011A46;
+    color: #151C27;
+    border: 1px solid #151C27;
     border-radius: 5px;
     font-family: "Inter", sans-serif;
     font-weight: 500;
@@ -361,7 +361,7 @@ form.formulaire2 {
 
     width: 80%;
     height: 50px;
-    background: #011A46;
+    background: #151C27;
     border: none;
     border-radius: 25px;
     align-content: center;
@@ -378,6 +378,7 @@ form.formulaire2 {
     text-decoration: none;
     
 }
+
 /*============================================================================== LAYOUT ==============================================================================================*/
 
 /***************************************************************** NAVBAR **************************************************************************/
@@ -553,7 +554,7 @@ nav {
 
 /*********** Grid ***********/
 
-.grid{  width: 100%; display: flex;}
+.grid{ width: 100%; display: flex; padding-top: 2em;}
 
 /***************************************************************** NAV **************************************************************************/
 
@@ -669,11 +670,12 @@ nav {
     width: 100%;
     height: 40px;
     display: flex;
-    gap: 8px;
+    align-content: center;
+    gap: 1%;
   
 }
 
-.publicationList figure{ width: 7%;}
+.publicationList figure{ width: 10%;}
 
 .publicationList img{
 
@@ -687,7 +689,8 @@ nav {
 
 .writeSomething{
 
-    width: 92%;
+    width: 89%;
+    height: 40px;
     padding: 0 1em;
     background: #f3f3f3;
     color: #918e8e;
@@ -702,6 +705,31 @@ nav {
 }
 
 .writeSomething:hover{ background: #cacaca;}
+
+.__remove-field{
+    position: relative;
+    top: -110px;
+    right: -80px;
+}
+
+.upload-area{
+    border-radius:3px;
+    margin: 0 auto;
+    text-align: center;
+    overflow: auto;
+}
+.upload-area:hover{
+    cursor: pointer;
+}
+.upload-area h4{
+    text-align: center;
+    font-weight: normal;
+    font-family: sans-serif;
+    color: darkslategray;
+}
+.fileUpload{
+    display: none;
+}
 
 /*********** Publication Divider ***********/
 
@@ -740,6 +768,8 @@ nav {
 
 .icone i { font-size: 1.3em;}
 
+.icone a { color: #151C27;}
+
 /***************************************************************** CARDS **************************************************************************/
 
 /*********** Card ***********/
@@ -753,7 +783,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    gap: 30px;
 
 }
 
