--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@ body{
 
 /********************************* Grid ***************************/
 
-.grid2{ width: 100%; display: flex; padding: 2.5em 0 3.5em 0;}
+.grid2{ width: 100%; display: flex; padding: .5em 0 .5em 0;}
 
 /********************************* Grid Left ***************************/
 
