--- a/public/css/style.css
+++ b/public/css/style.css
@@ -648,7 +648,7 @@ form.formulaire2 {
 
 /*********** Logo ***********/
 
-.logo { width: 15%; margin-left: 1em;}
+.logoPage { width: 15%; margin-left: 1em;}
 
 /*********** Menu ***********/
 
@@ -1058,5 +1058,767 @@ h2{
 
 
 
+/******************************* Profil **********************************/
+@import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700|Source+Sans+Pro:300,400,600,700&display=swap");
 
+:root {
+    
+    --bg-color: #151728;
+    --border-color: #272a3a;
+    --title-font: "DM Sans", sans-serif;
+    --body-font: "Source Sans Pro", sans-serif;
+    --side-title: #5c5e6e;
+    --button: #8f98a9;
+}
+
+html {
+ box-sizing: border-box;
+ -webkit-font-smoothing: antialiased;
+}
+
+#profilePage {
+ font-family: var(--body-font);
+ background-color: #373e57;
+ color: #ccc8db;
+ height: 100vh;
+ width: 100%;
+ 
+}
+
+.container {
+ background-color: var(--bg-color);
+ display: flex;
+ width: 100%;
+ height: 93vh;
+ overflow: hidden;
+ margin: 0 auto;
+}
+
+.left-side {
+ width: 260px;
+ border-right: 1px solid var(--border-color);
+ display: flex;
+ flex-direction: column;
+ transition: 0.3s;
+ background-color: var(--bg-color);
+ overflow: auto;
+ flex-shrink: 0;
+
+ 
+}
+
+.left-side.active {
+    z-index: 4;
+    
+}
+
+.active > *:not(.logo) {
+opacity: 1;
+transition: 0.3s 0.2s;
+}
+.left-side-button svg:first-child {
+opacity: 0;
+}
+.left-side-button svg:last-child {
+    transform: translate(-50%, -50%);
+    opacity: 1;
+}
+
+.active:not(.left-side.active) {
+width: 56px;
+overflow: hidden; 
+}
+.active > *:not(.logo):not(.left-side-button) {
+    opacity: 0;
+}
+
+.active .logo {
+
+writing-mode: vertical-lr;
+transform: rotate(180deg);
+transform-origin: bottom;
+display: flex;
+align-items: center;
+margin-top: -10px;
+}
+ 
+.right-side {
+ width: 12.85%;
+ height: 100%;
+ flex-shrink: 0;
+ margin-left: auto;
+ overflow: auto;
+ background-color: var(--bg-color);
+ display: flex;
+ flex-direction: column;
+
+  position: fixed;
+  right: 14.7%;
+  top: 11.8%;
+  transition: 0.3s;
+  height: 90vh;
+  transform: translateX(280px);
+  z-index: 4;
+
+}
+
+.user{
+    display: flex;
+    flex-direction: column;
+}
+
+.right-side .active {
+ transform: translatex(0);
+}
+
+.main {
+ flex-grow: 1;
+ display: flex;
+ flex-direction: column;
+ background-color: #181d2f;
+}
+
+.logo {
+ font-family: var(--title-font);
+ font-size: 15px;
+ color: #fff;
+ font-weight: 600;
+ text-align: center;
+ height: 68px;
+ line-height: 68px;
+ letter-spacing: 4px;
+ position: sticky;
+ top: 0;
+ background: linear-gradient(
+  to bottom,
+  rgba(21, 23, 40, 1) 0%,
+  rgba(21, 23, 40, 1) 76%,
+  rgba(21, 23, 40, 0) 100%
+ );
+}
+
+.side-title {
+ font-family: var(--title-font);
+ color: var(--side-title);
+ font-size: 15px;
+ font-weight: 600;
+ margin-bottom: 20px;
+}
+
+.side-wrapper {
+ padding: 30px;
+}
+
+.side-menu {
+ display: flex;
+ flex-direction: column;
+ font-size: 15px;
+ white-space: nowrap;
+ 
+}
+
+.side-menu svg {
+    margin-right: 16px;
+    width: 16px;
+}
+
+.side-menu a {
+    text-decoration: none;
+    color: #9c9cab;
+    display: flex;
+    align-items: center;
+}
+
+.side-menu a:hover {
+    color: #fff;
+}
+
+.side-menu a:not(:last-child) {
+    margin-bottom: 20px;
+}
+   
+
+.follow-me {
+ text-decoration: none;
+ font-size: 14px;
+ display: flex;
+ align-items: center;
+ margin-top: auto;
+ overflow: hidden;
+ color: #9c9cab;
+ padding: 0 20px;
+ height: 52px;
+ flex-shrink: 0;
+ border-top: 1px solid var(--border-color);
+ position: relative;
+ 
+}
+
+.follow-me svg {
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+   }
+
+.follow-text {
+ display: flex;
+ align-items: center;
+ transition: 0.3s;
+}
+
+.follow-me:hover {
+ .follow-text {
+  transform: translateY(100%);
+ }
+ .developer {
+  top: 0;
+ }
+}
+
+.developer {
+ position: absolute;
+ color: #fff;
+ left: 0;
+ top: -100%;
+ display: flex;
+ transition: 0.3s;
+ padding: 0 20px;
+ align-items: center;
+ background-color: var(--border-color);
+ width: 100%;
+ height: 100%;
+}
+
+.developer img {
+ border-radius: 50%;
+ width: 26px;
+ height: 26px;
+ object-fit: cover;
+ margin-right: 10px;
+}
+
+.search-bar {
+ height: 60px;
+ background-color: var(--bg-color);
+ z-index: 3;
+ position: relative;
+}
+
+input {
+    height: 100%;
+    width: 100%;
+    display: block;
+    background-color: transparent;
+    border: none;
+    padding: 0 54px;
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='512' height='512'%3e%3cpath d='M508.9 478.7L360 330a201.6 201.6 0 0045.2-127.3C405.3 90.9 314.4 0 202.7 0S0 91 0 202.7s91 202.6 202.7 202.6c48.2 0 92.4-17 127.3-45.2L478.7 509c4.2 4.1 11 4.1 15 0l15.2-15.1c4.1-4.2 4.1-11 0-15zm-306.2-116c-88.3 0-160-71.8-160-160s71.7-160 160-160 160 71.7 160 160-71.8 160-160 160z' data-original='%23000000' class='active-path' data-old_color='%23000000' fill='%235C5D71'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-size: 16px;
+    background-position: 25px 50%;
+    color: #fff;
+    font-family: var(--body-font);
+    font-weight: 600;
+}
+
+input::placeholder {
+    color: #5c5d71;
+   }
+
+.main-container {
+    width: 85%;
+    padding: 20px;
+    flex-grow: 1;
+    overflow: auto;
+    background-color: #24273b;
+}
+
+.profile {
+ position: relative;
+ height: 40vh;
+ min-height: 250px;
+ max-height: 350px;
+ z-index: 1;
+}
+
+.profile-cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 4px;
+}
+  
+.profile:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: 0;
+    background-image: url("https://images.unsplash.com/photo-1508247967583-7d982ea01526?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    filter: blur(50px);
+    opacity: 0.7;
+}
+
+
+.profile-menu {
+ position: absolute;
+ bottom: 0;
+ padding-left: 200px;
+ background: var(--bg-color);
+ width: 100%;
+ display: flex;
+ border-radius: 0 0 4px 4px;
+}
+
+.profile-menu-link {
+ padding: 20px 16px;
+ color: var(--side-title);
+ transition: 0.3s;
+ cursor: pointer;
+}
+
+.actives:hover {
+
+  color: #fff;
+  background-color: #1b1d2e;
+  border-bottom: 3px solid #1488fa;
+
+ }
+
+.profile-avatar {
+ position: absolute;
+ align-items: center;
+ display: flex;
+ z-index: 1;
+ bottom: 16px;
+ left: 24px;
+}
+
+.profile-img {
+ width: 150px;
+ height: 150px;
+ border-radius: 50%;
+ object-fit: cover;
+ border: 3px solid var(--bg-color);
+}
+
+.profile-name {
+ margin-left: 24px;
+ margin-bottom: 24px;
+ font-size: 22px;
+ color: #fff;
+ font-weight: 600;
+ font-family: var(--title-font);
+}
+
+.timeline {
+ display: flex;
+ padding-top: 20px;
+ position: relative;
+ z-index: 2;
+}
+
+.timeline-left {
+    width: 310px;
+    flex-shrink: 0;
+}
+
+.timeline-right {
+    flex-grow: 1;
+    padding-left: 20px;
+}
+
+.box {
+ background-color: var(--bg-color);
+ border-radius: 4px;
+}
+
+.intro {
+ padding: 20px;
+}
+
+.intro-title {
+    font-family: var(--title-font);
+    color: var(--side-title);
+    font-weight: 600;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.intro-menu {
+    background-color: var(--button);
+    box-shadow: -8px 0 0 0 button, 8px 0 0 0 button;
+    width: 5px;
+    height: 5px;
+    border: 0;
+    padding: 0;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: 8px;
+}
+
+.info {
+
+ font-size: 15px;
+
+}
+
+.info-item {
+
+    display: flex;
+    color: #c3c5d5;
+    margin-top: 14px;
+
+}
+  
+  
+.info-item a {
+
+    margin-left: 6px;
+    text-decoration: none;
+
+}
+  
+.info-item svg {
+
+    width: 16px;
+    margin-right: 10px;
+
+}
+
+
+.event {
+ position: relative;
+ margin-top: 20px;
+ padding: 10px;
+}
+
+.event-wrapper {
+ position: relative;
+}
+
+.event-img {
+ max-width: 100%;
+ display: block;
+ padding-bottom: 12px;
+}
+
+.event-date {
+ position: absolute;
+ left: 20px;
+ top: 15px;
+}
+
+.event-month {
+ background-color: #1687fa;
+ padding: 7px 20px;
+ font-weight: 600;
+ font-family: var(--title-font);
+ color: #fff;
+ text-align: center;
+ border-radius: 4px 4px 0 0;
+}
+
+.event-day {
+ width: 100%;
+ backdrop-filter: blur(4px);
+ color: #fff;
+ font-size: 22px;
+ font-weight: 600;
+ font-family: var(--title-font);
+ background-color: rgba(0, 0, 0, 0.4);
+ padding: 6px 0;
+ text-align: center;
+}
+
+.event-title {
+ color: #c3c5d5;
+ margin-bottom: 5px;
+ font-family: var(--title-font);
+ font-weight: 600;
+ padding: 0 14px;
+}
+
+.event-subtitle {
+ color: var(--side-title);
+ font-family: var(--title-font);
+ font-size: 13px;
+ font-weight: 500;
+ padding: 0 14px;
+}
+
+.pages {
+ margin-top: 20px;
+ padding: 20px;
+}
+
+.user {
+ display: flex;
+ align-items: center;
+ cursor: pointer;
+}
+
+.user + .user {
+ margin-top: 18px;
+}
+
+.user-img {
+ border-radius: 50%;
+ width: 45px;
+ height: 45px;
+ margin-right: 15px;
+ object-fit: cover;
+ object-position: center;
+}
+
+.username {
+ font-size: 15px;
+ font-family: var(--title-font);
+}
+
+.status-menu {
+ padding: 20px;
+ display: flex;
+ align-items: center;
+ margin-left: 10px;
+}
+
+.status-menu-item {
+
+    text-decoration: none;
+    color: #ccc8db;
+    padding: 10px 14px;
+    line-height: 0.7;
+    font-family: var(--title-font);
+    font-weight: 500;
+    border-radius: 20px; 
+}
+
+.active:hover {
+
+    background-color: #2e2e40;
+    color: #fff;
+
+}
+  
+.status-img {
+ width: 50px;
+ height: 50px;
+ object-fit: cover;
+ border-radius: 50%;
+ margin-right: 20px;
+}
+
+.status-main {
+ padding: 0 20px;
+ display: flex;
+ align-items: center;
+ border-bottom: 1px solid var(--border-color);
+ padding-bottom: 20px;
+ flex-wrap: wrap;
+}
+
+.status-textarea {
+ flex-grow: 1;
+ background-color: transparent;
+ border: none;
+ resize: none;
+ margin-top: 15px;
+ color: #fff;
+ max-width: calc(100% - 70px);
+
+}
+
+.status-textarea::placeholder {
+    color: #5c5d71;
+}
+
+.status-actions {
+ display: flex;
+ padding: 10px 20px;
+}
+
+.status-action {
+ text-decoration: none;
+ color: #ccc8db;
+ margin-right: 20px;
+ display: flex;
+ align-items: center;
+ 
+}
+
+.status-action svg {
+    width: 16px;
+    flex-shrink: 0;
+    margin-right: 8px;
+}
+  
+
+.status-share {
+ background-color: #1b86f9;
+ border: none;
+ color: #fff;
+ border-radius: 4px;
+ padding: 10px 20px;
+ margin-left: auto;
+ box-shadow: 0 0 20px #1b86f9;
+ cursor: pointer;
+}
+
+.album {
+ padding-top: 20px;
+ margin-top: 20px;
+ 
+}
+.album .status-main {
+    border: none;
+    display: flex;
+}
+   
+.album .intro-menu {
+    margin-bottom: auto;
+    margin-top: 5px;
+}
+
+.album-detail {
+ width: calc(100% - 110px);
+}
+
+.album-title span {
+ color: #1771d6;
+ cursor: pointer;
+}
+
+.album-date {
+ font-size: 15px;
+ color: #595c6c;
+ margin-top: 4px;
+}
+
+.album-content {
+ padding: 0 20px 20px;
+}
+
+.album-photo {
+ width: 100%;
+ object-fit: cover;
+ object-position: center;
+ border-radius: 4px;
+ margin-top: 10px;
+}
+
+.album-photos {
+ display: flex;
+ margin-top: 20px;
+ max-height: 30vh;
+}
+
+.album-photos > .album-photo {
+ width: 50%;
+}
+
+.album-right {
+ width: 50%;
+ margin-left: 10px;
+ line-height: 0;
+ display: flex;
+ flex-direction: column;
+ .album-photo {
+  height: calc(50% - 10px);
+ }
+}
+
+.album-actions {
+ padding: 0 20px 20px;
+}
+
+.album-action {
+ margin-right: 20px;
+ text-decoration: none;
+ color: #a2a4b4;
+ display: inline-flex;
+ align-items: center;
+ font-weight: 600;
+ 
+}
+
+.album-action:hover {
+    color: #fff;
+}
+
+.album-action svg {
+    width: 16px;
+    margin-right: 6px;
+}
+
+
+.contacts{
+ display: flex;
+ flex: 1;
+ align-items: center;
+}
+
+.overlay {
+ width: 100%;
+ height: 100%;
+ position: fixed;
+ top: 0;
+ left: 0;
+ background-color: rgba(#24273b, 0.8);
+ opacity: 0;
+ visibility: hidden;
+ pointer-events: none;
+ transition: 0.3s;
+
+}
+
+
+.left-side-button {
+ display: none;
+
+}
+
+.left-side-button svg {
+    transition: 0.2s;
+    width: 24px;
+}
+
+.left-side-button svg:last-child {
+    position: absolute;
+    left: 50%;
+    transform: translate(100%, -50%);
+    top: 50%;
+    opacity: 0;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.01);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.11);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
 
